@@ -22,7 +22,6 @@ import com.gmail.nossr50.util.BlockUtils;
 import com.gmail.nossr50.util.CancellableRunnable;
 import com.gmail.nossr50.util.EventUtils;
 import com.gmail.nossr50.util.ItemUtils;
-import com.gmail.nossr50.util.MaterialMapStore;
 import com.gmail.nossr50.util.MetadataConstants;
 import com.gmail.nossr50.util.Misc;
 import com.gmail.nossr50.util.Permissions;
@@ -44,7 +43,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.PlayerInventory;
-import org.bukkit.metadata.MetadataValue;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
@@ -64,9 +62,12 @@ import static java.util.Objects.requireNonNull;
 public class HerbalismManager extends SkillManager {
     private static final HashMap<String, Integer> plantBreakLimits;
 
+    private static final String CACTUS_STR = "cactus";
+    private static final String CACTUS_FLOWER_STR = "cactus_flower";
+
     static {
         plantBreakLimits = new HashMap<>();
-        plantBreakLimits.put("cactus", 3);
+        plantBreakLimits.put(CACTUS_STR, 3);
         plantBreakLimits.put("bamboo", 20);
         plantBreakLimits.put("sugar_cane", 3);
         plantBreakLimits.put("kelp", 26);
@@ -81,10 +82,13 @@ public class HerbalismManager extends SkillManager {
     public boolean canGreenThumbBlock(BlockState blockState) {
         if (!RankUtils.hasUnlockedSubskill(getPlayer(), SubSkillType.HERBALISM_GREEN_THUMB)) return false;
 
-        Player player = getPlayer();
-        ItemStack item = player.getInventory().getItemInMainHand();
+        final Player player = getPlayer();
+        final ItemStack item = player.getInventory().getItemInMainHand();
 
-        return item.getAmount() > 0 && item.getType() == Material.WHEAT_SEEDS && BlockUtils.canMakeMossy(blockState) && Permissions.greenThumbBlock(player, blockState.getType());
+        return item.getAmount() > 0
+                && item.getType() == Material.WHEAT_SEEDS
+                && BlockUtils.canMakeMossy(blockState.getBlock())
+                && Permissions.greenThumbBlock(player, blockState.getType());
     }
 
     public boolean canUseShroomThumb(BlockState blockState) {
@@ -167,10 +171,6 @@ public class HerbalismManager extends SkillManager {
         return Permissions.isSubSkillEnabled(getPlayer(), SubSkillType.HERBALISM_HYLIAN_LUCK);
     }
 
-    public boolean canGreenTerraBlock(BlockState blockState) {
-        return mmoPlayer.getAbilityMode(SuperAbilityType.GREEN_TERRA) && BlockUtils.canMakeMossy(blockState);
-    }
-
     public boolean canActivateAbility() {
         return mmoPlayer.getToolPreparationMode(ToolType.HOE) && Permissions.greenTerra(getPlayer());
     }
@@ -227,8 +227,9 @@ public class HerbalismManager extends SkillManager {
      * @param blockBreakEvent The Block Break Event to process
      */
     public void processHerbalismBlockBreakEvent(BlockBreakEvent blockBreakEvent) {
-        Player player = getPlayer();
-        Block block = blockBreakEvent.getBlock();
+        final Player player = getPlayer();
+
+        final Block block = blockBreakEvent.getBlock();
 
         // Early exit if AFK prevention is active and player is inside a vehicle
         if (mcMMO.p.getGeneralConfig().getHerbalismPreventAFK() && player.isInsideVehicle()) {
@@ -238,24 +239,26 @@ public class HerbalismManager extends SkillManager {
 
         // Check if the plant was recently replanted
         if (block.getBlockData() instanceof Ageable ageableCrop) {
-            List<MetadataValue> metadataValues = block.getMetadata(MetadataConstants.METADATA_KEY_REPLANT);
-
-            if (!metadataValues.isEmpty() && metadataValues.get(0).asBoolean()) {
-                if (isAgeableMature(ageableCrop)) {
-                    block.removeMetadata(MetadataConstants.METADATA_KEY_REPLANT, mcMMO.p);
-                } else {
-                    blockBreakEvent.setCancelled(true);
-                    return;
+            if (!block.getMetadata(MetadataConstants.METADATA_KEY_REPLANT).isEmpty()) {
+                if (block.getMetadata(MetadataConstants.METADATA_KEY_REPLANT).getFirst().asBoolean()) {
+                    if (isAgeableMature(ageableCrop)) {
+                        block.removeMetadata(MetadataConstants.METADATA_KEY_REPLANT, mcMMO.p);
+                    } else {
+                        //Crop is recently replanted to back out of destroying it
+                        blockBreakEvent.setCancelled(true);
+                        return;
+                    }
                 }
             }
         }
 
-        // Collect all blocks that would be broken from this event
-        Set<Block> brokenBlocks = getBrokenHerbalismBlocks(blockBreakEvent);
+        //Grab all broken blocks
+        final HashSet<Block> brokenBlocks = getBrokenHerbalismBlocks(blockBreakEvent);
 
-        if (brokenBlocks.isEmpty()) return;
+        if (brokenBlocks.isEmpty())
+            return;
 
-        // Handle rewards, xp, ability interactions, etc
+        //Handle rewards, xp, ability interactions, etc
         processHerbalismOnBlocksBroken(blockBreakEvent, brokenBlocks);
     }
 
@@ -268,7 +271,7 @@ public class HerbalismManager extends SkillManager {
     private void processHerbalismOnBlocksBroken(BlockBreakEvent blockBreakEvent, Set<Block> brokenPlants) {
         if (blockBreakEvent.isCancelled()) return;
 
-        BlockState originalBreak = blockBreakEvent.getBlock().getState();
+        final BlockState originalBreak = blockBreakEvent.getBlock().getState();
 
         // Handle Green Thumb activation
         if (Permissions.greenThumbPlant(getPlayer(), originalBreak.getType()) && mcMMO.p.getGeneralConfig().isGreenThumbReplantableCrop(originalBreak.getType()) && !getPlayer().isSneaking()) {
@@ -278,7 +281,7 @@ public class HerbalismManager extends SkillManager {
         checkDoubleDropsOnBrokenPlants(blockBreakEvent.getPlayer(), brokenPlants);
 
         List<BlockSnapshot> delayedChorusBlocks = new ArrayList<>();
-        List<Block> noDelayPlantBlocks = new ArrayList<>();
+        HashSet<Block> noDelayPlantBlocks = new HashSet<>(); //Blocks that will be checked immediately
 
         Location originalLocation = originalBreak.getBlock().getLocation();
 
@@ -302,22 +305,26 @@ public class HerbalismManager extends SkillManager {
             }
         }
 
-        // Award XP for non-chorus blocks
+        //Give out XP to the non-chorus blocks
         if (!noDelayPlantBlocks.isEmpty()) {
+            //Note: Will contain 1 chorus block if the original block was a chorus block, this is to prevent delays for the XP bar
             awardXPForPlantBlocks(noDelayPlantBlocks);
         }
 
-        // Handle delayed XP checks for chorus blocks
         if (!delayedChorusBlocks.isEmpty()) {
-            DelayedHerbalismXPCheckTask delayedTask = new DelayedHerbalismXPCheckTask(mmoPlayer, delayedChorusBlocks);
-            mcMMO.p.getFoliaLib().getScheduler().runAtEntity(mmoPlayer.getPlayer(), delayedTask);
+            //Check XP for chorus blocks
+            DelayedHerbalismXPCheckTask delayedHerbalismXPCheckTask = new DelayedHerbalismXPCheckTask(mmoPlayer, delayedChorusBlocks);
+
+            //Large delay because the tree takes a while to break
+            mcMMO.p.getFoliaLib().getScheduler().runAtEntity(mmoPlayer.getPlayer(), delayedHerbalismXPCheckTask); //Calculate Chorus XP + Bonus Drops 1 tick later
         }
     }
 
     /**
      * Check for double drops on a collection of broken blocks
      * If a double drop has occurred, it will be marked here for bonus drops
-     * @param player player who broke the blocks
+     *
+     * @param player       player who broke the blocks
      * @param brokenPlants the collection of broken plants
      */
     public void checkDoubleDropsOnBrokenPlants(Player player, Collection<Block> brokenPlants) {
@@ -328,41 +335,30 @@ public class HerbalismManager extends SkillManager {
             return;
         }
 
-        for(Block brokenPlant : brokenPlants) {
+        for (Block brokenPlant : brokenPlants) {
             BlockState brokenPlantState = brokenPlant.getState();
             BlockData plantData = brokenPlantState.getBlockData();
 
             //Check for double drops
             if (!mcMMO.getUserBlockTracker().isIneligible(brokenPlant)) {
-
                 /*
-                 *
                  * Natural Blocks
-                 *
-                 *
-                 *
                  */
-
                 //Not all things that are natural should give double drops, make sure its fully mature as well
                 if (plantData instanceof Ageable ageable) {
 
-                    if (isAgeableMature(ageable) || isBizarreAgeable(plantData)) {
-                        if (checkDoubleDrop(brokenPlant)) {
-                            markForBonusDrops(brokenPlant);
-                        }
+                    if ((isAgeableMature(ageable) || isBizarreAgeable(plantData)) && checkDoubleDrop(brokenPlant)) {
+                        markForBonusDrops(brokenPlant);
                     }
+
                 } else if (checkDoubleDrop(brokenPlant)) {
                     //Add metadata to mark this block for double or triple drops
                     markForBonusDrops(brokenPlant);
                 }
             } else {
-
                 /*
-                 *
                  * Unnatural Blocks
-                 *
                  */
-
                 //If it's a crop, we need to reward XP when its fully grown
                 if (isAgeableAndFullyMature(plantData) && !isBizarreAgeable(plantData)) {
                     //Add metadata to mark this block for double or triple drops
@@ -380,7 +376,7 @@ public class HerbalismManager extends SkillManager {
      */
     public boolean isBizarreAgeable(BlockData blockData) {
         if (blockData instanceof Ageable) {
-            //Catcus and Sugar Canes cannot be trusted
+            // Cactus and Sugar Canes cannot be trusted
             return switch (blockData.getMaterial()) {
                 case CACTUS, KELP, SUGAR_CANE, BAMBOO -> true;
                 default -> false;
@@ -392,6 +388,7 @@ public class HerbalismManager extends SkillManager {
 
     /**
      * Mark a block for bonus drops.
+     *
      * @param block the block to mark
      */
     public void markForBonusDrops(Block block) {
@@ -410,44 +407,44 @@ public class HerbalismManager extends SkillManager {
         return plantData instanceof Ageable ageable && isAgeableMature(ageable);
     }
 
-    public void awardXPForPlantBlocks(List<Block> brokenPlants) {
+    public void awardXPForPlantBlocks(Set<Block> brokenPlants) {
         int xpToReward = 0;
         int firstXpReward = -1;
-        ExperienceConfig experienceConfig = ExperienceConfig.getInstance();
-        boolean limitXPOnTallPlants = experienceConfig.limitXPOnTallPlants();
-
-        Block firstBlock = null;
 
         for (Block brokenPlantBlock : brokenPlants) {
             BlockState brokenBlockNewState = brokenPlantBlock.getState();
             BlockData plantData = brokenBlockNewState.getBlockData();
-            boolean isEligible = mcMMO.getUserBlockTracker().isIneligible(brokenBlockNewState);
 
-            if (isEligible && isAgeableAndFullyMature(plantData) && !isBizarreAgeable(plantData)) {
-                // XP para blocos não naturais, maduros e não bizarros
-                xpToReward += experienceConfig.getXp(PrimarySkillType.HERBALISM, brokenBlockNewState.getType());
-                if (firstXpReward == -1) {
-                    firstXpReward = xpToReward;
-                    firstBlock = brokenPlantBlock;
+            if (mcMMO.getUserBlockTracker().isIneligible(brokenBlockNewState)) {
+                /*
+                 * Unnatural Blocks
+                 */
+                //If its a Crop we need to reward XP when its fully grown
+                if (isAgeableAndFullyMature(plantData) && !isBizarreAgeable(plantData)) {
+                    xpToReward += ExperienceConfig.getInstance().getXp(PrimarySkillType.HERBALISM, brokenBlockNewState.getType());
+                    if (firstXpReward == -1)
+                        firstXpReward = xpToReward;
                 }
 
+                //Mark it as natural again as it is being broken
                 mcMMO.getUserBlockTracker().setEligible(brokenBlockNewState);
-            } else if (!isEligible) {
-                // XP para blocos naturais
+            } else {
+                /*
+                 * Natural Blocks
+                 */
+                // Calculate XP
                 if (plantData instanceof Ageable plantAgeable) {
+
                     if (isAgeableMature(plantAgeable) || isBizarreAgeable(plantData)) {
-                        xpToReward += experienceConfig.getXp(PrimarySkillType.HERBALISM, brokenBlockNewState.getType());
-                        if (firstXpReward == -1) {
+                        xpToReward += ExperienceConfig.getInstance().getXp(PrimarySkillType.HERBALISM, brokenBlockNewState.getType());
+                        if (firstXpReward == -1)
                             firstXpReward = xpToReward;
-                            firstBlock = brokenPlantBlock;
-                        }
                     }
+
                 } else {
-                    xpToReward += experienceConfig.getXp(PrimarySkillType.HERBALISM, brokenPlantBlock.getType());
-                    if (firstXpReward == -1) {
+                    xpToReward += ExperienceConfig.getInstance().getXp(PrimarySkillType.HERBALISM, brokenPlantBlock.getType());
+                    if (firstXpReward == -1)
                         firstXpReward = xpToReward;
-                        firstBlock = brokenPlantBlock;
-                    }
                 }
             }
         }
@@ -456,20 +453,20 @@ public class HerbalismManager extends SkillManager {
             mmoPlayer.getPlayer().sendMessage("Plants processed: " + brokenPlants.size());
         }
 
-        // Recompensar XP
+        //Reward XP
         if (xpToReward > 0) {
-            if (limitXPOnTallPlants && plantBreakLimits.containsKey(firstBlock.getType().getKey().getKey())) {
+            // get first block from hash set using stream API
+            final Block firstBlock = brokenPlants.stream().findFirst().orElse(null);
+            if (firstBlock != null
+                    && ExperienceConfig.getInstance().limitXPOnTallPlants()
+                    && plantBreakLimits.containsKey(firstBlock.getType().getKey().getKey())) {
                 int limit = plantBreakLimits.get(firstBlock.getType().getKey().getKey()) * firstXpReward;
+                // Plant may be unnaturally tall, limit XP
                 applyXpGain(Math.min(xpToReward, limit), XPGainReason.PVE, XPGainSource.SELF);
             } else {
                 applyXpGain(xpToReward, XPGainReason.PVE, XPGainSource.SELF);
             }
         }
-    }
-
-    private int getNaturalGrowthLimit(Material brokenPlant) {
-        // This is an exploit counter-measure to prevent players from growing unnaturally tall plants and reaping XP
-        return plantBreakLimits.getOrDefault(brokenPlant.getKey().getKey(), 0);
     }
 
     public boolean isAgeableMature(Ageable ageable) {
@@ -490,7 +487,7 @@ public class HerbalismManager extends SkillManager {
         int blocksGivingXP = 0;
 
         for (BlockSnapshot blockSnapshot : brokenPlants) {
-            BlockState brokenBlockNewState = blockSnapshot.getBlockRef().getState();
+            final BlockState brokenBlockNewState = blockSnapshot.getBlockRef().getState();
 
             //Remove metadata from the snapshot of blocks
             if (brokenBlockNewState.hasMetadata(MetadataConstants.METADATA_KEY_BONUS_DROPS)) {
@@ -530,60 +527,66 @@ public class HerbalismManager extends SkillManager {
      */
     private HashSet<Block> getBrokenHerbalismBlocks(@NotNull BlockBreakEvent blockBreakEvent) {
         //Get an updated capture of this block
-        BlockState originBlockState = blockBreakEvent.getBlock().getState();
-        Material originBlockMaterial = originBlockState.getType();
-        HashSet<Block> blocksBroken = new HashSet<>(); //Blocks broken
+        final BlockState originBlockState = blockBreakEvent.getBlock().getState();
+        final Material originBlockMaterial = originBlockState.getType();
+        final HashSet<Block> blocksBroken = new HashSet<>(); //Blocks broken
 
         //Add the initial block
         blocksBroken.add(originBlockState.getBlock());
 
         if (!isOneBlockPlant(originBlockMaterial)) {
             //If the block is a multi-block structure, capture a set of all blocks broken and return that
-            blocksBroken = getBrokenBlocksMultiBlockPlants(originBlockState);
+            addBrokenBlocksMultiBlockPlants(originBlockState, blocksBroken);
         }
 
         //Return all broken plant-blocks
         return blocksBroken;
     }
 
-    private HashSet<Block> getBrokenChorusBlocks(BlockState originalBreak) {
-        return grabChorusTreeBrokenBlocksRecursive(originalBreak.getBlock(), new HashSet<>());
-    }
-
-    private HashSet<Block> grabChorusTreeBrokenBlocksRecursive(Block currentBlock, HashSet<Block> traversed) {
-        if (!isChorusTree(currentBlock.getType())) return traversed;
+    private void addChorusTreeBrokenBlocks(Block currentBlock, Set<Block> traversed) {
+        if (!isChorusTree(currentBlock.getType()))
+            return;
 
         // Prevent any infinite loops, who needs more than 256 chorus anyways
-        if (traversed.size() > 256) return traversed;
-        if (!traversed.add(currentBlock)) return traversed;
+        if (traversed.size() > 256)
+            return;
+
+        if (!traversed.add(currentBlock))
+            return;
 
         //Grab all Blocks in the Tree
         for (BlockFace blockFace : new BlockFace[]{BlockFace.UP, BlockFace.NORTH, BlockFace.SOUTH, BlockFace.EAST, BlockFace.WEST})
-            grabChorusTreeBrokenBlocksRecursive(currentBlock.getRelative(blockFace, 1), traversed);
-
-        traversed.add(currentBlock);
-
-        return traversed;
+            addChorusTreeBrokenBlocks(currentBlock.getRelative(blockFace, 1), traversed);
     }
 
-    /**
-     * Grab a set of all plant blocks that are broken as a result of this event
-     * The method to grab these blocks is a bit hacky and does not hook into the API
-     * Basically we expect the blocks to be broken if this event is not cancelled and we determine which block are broken on our end rather than any event state captures
-     *
-     * @return a set of plant-blocks broken from this event
-     */
-    protected HashSet<Block> getBrokenBlocksMultiBlockPlants(BlockState brokenBlock) {
-        //Track the broken blocks
-        HashSet<Block> brokenBlocks;
 
+    protected void addBrokenBlocksMultiBlockPlants(BlockState brokenBlock, Set<Block> brokenBlocks) {
         if (isChorusBranch(brokenBlock.getType())) {
-            brokenBlocks = getBrokenChorusBlocks(brokenBlock);
+            addChorusTreeBrokenBlocks(brokenBlock.getBlock(), brokenBlocks);
+        } else if (isCactus(brokenBlock.getType())) {
+            addCactusBlocks(brokenBlock.getBlock(), brokenBlocks);
         } else {
-            brokenBlocks = getBlocksBrokenAboveOrBelow(brokenBlock, false, mcMMO.getMaterialMapStore().isMultiBlockHangingPlant(brokenBlock.getType()));
+            addBlocksBrokenAboveOrBelow(brokenBlock.getBlock(), brokenBlocks, mcMMO.getMaterialMapStore().isMultiBlockHangingPlant(brokenBlock.getType()));
         }
+    }
 
-        return brokenBlocks;
+    private void addCactusBlocks(Block currentBlock, Set<Block> traversed) {
+        if (!isCactus(currentBlock.getType()))
+            return;
+
+        if (traversed.size() > 4) // Max size 3 cactus + flower
+            return;
+
+        if (!traversed.add(currentBlock))
+            return;
+
+        addCactusBlocks(currentBlock.getRelative(BlockFace.UP), traversed);
+        addCactusBlocks(currentBlock.getRelative(BlockFace.DOWN), traversed);
+    }
+
+    private boolean isCactus(Material material) {
+        return material.getKey().getKey().equalsIgnoreCase(CACTUS_STR)
+                || material.getKey().getKey().equalsIgnoreCase(CACTUS_FLOWER_STR);
     }
 
     private boolean isChorusBranch(Material blockType) {
@@ -594,24 +597,7 @@ public class HerbalismManager extends SkillManager {
         return blockType == Material.CHORUS_PLANT || blockType == Material.CHORUS_FLOWER;
     }
 
-    /**
-     * Grabs blocks upwards from a target block
-     * A lot of Plants/Crops in Herbalism only break vertically from a broken block
-     * The vertical search returns early if it runs into anything that is not a multi-block plant
-     * Multi-block plants are hard-coded and kept in {@link MaterialMapStore}
-     *
-     * @param originBlock The point of the "break"
-     * @param inclusive   Whether to include the origin block
-     * @param below       Whether to search down instead of up.
-     * @return A set of blocks above the target block which can be assumed to be broken
-     */
-    private HashSet<Block> getBlocksBrokenAboveOrBelow(BlockState originBlock, boolean inclusive, boolean below) {
-        HashSet<Block> brokenBlocks = new HashSet<>();
-        Block block = originBlock.getBlock();
-
-        //Add the initial block to the set
-        if (inclusive) brokenBlocks.add(block);
-
+    private void addBlocksBrokenAboveOrBelow(Block originBlock, Set<Block> brokenBlocks, boolean below) {
         //Limit our search
         int maxHeight = 512;
 
@@ -619,13 +605,12 @@ public class HerbalismManager extends SkillManager {
 
         // Search vertically for multi-block plants, exit early if any non-multi block plants
         for (int y = 0; y < maxHeight; y++) {
-            Block relativeBlock = block.getRelative(relativeFace, y);
+            final Block relativeBlock = originBlock.getRelative(relativeFace, y);
+
             //Abandon our search if the block isn't multi
             if (isOneBlockPlant(relativeBlock.getType())) break;
             brokenBlocks.add(relativeBlock);
         }
-
-        return brokenBlocks;
     }
 
     /**
